microk8s-yugabyte/nodes/yugabyte-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: yugabyte-db
spec:
  clusterIP: None
  ports:
    - protocol: TCP
      port: 5433
      targetPort: 5433
      name: yugabyte-db
#  type: ExternalName
#  externalName: dc1-yb.vm
